# Kung-Fu-Chess

./: .env  .gitignore  CMakeLists.txt  test_message_router.db
include/db/: password_hasher.h  user_repository.h
include/engine/: EventBus.h  GameEngine.h  GameEvents.h  GameState.h  Result_structs.h
include/graphics/: Img.h  animation_clip.h  board_frame_manager.h  board_renderer.h  game_view_bindings.h  graphics_runner.h  piece_animation_set.h  piece_animator.h  piece_code.h  sprite_repository.h
include/graphics/board/: board_frame_manager.h  board_renderer.h
include/graphics/sprites/: animation_clip.h  animation_config.h  piece_animator.h  piece_code.h  sprite_repository.h
include/graphics/window/: canvas.h  graphics_runner.h  manage_element.h  renderable_element.h  win32_prompt_dialog.h
include/input/: board_mapper.h  controller.h
include/io/: BoardParser.h  board_printer.h  env_config.h
include/model/: Board.h  Piece.h  PieceFactory.h  Piece_enums.h  Position.h  Validation_enum.h
include/network/: connection_info.h  connections_registry.h  game_server.h  message_codec.h  message_router.h  messages.h  raw_message.h
include/network/client/: network_client.h
include/network/core/: auth_handler.h  game_server.h  matchmaker.h  message_router.h  room_manager.h
include/network/protocol/: message_codec.h  messages.h  server_message.h  server_message_codec.h
include/network/registry/: connections_registry.h  games_registry.h
include/network/room/: game_room.h  game_worker_pool.h  room_worker.h
include/realtime/: collision_resolver.h  motion.h  real_time_arbiter.h  standard_collision_resolver.h
include/rules/: RuleEngine.h  piece_rules.h
include/texttests/: script_data.h  script_parser.h  script_runner.h
src/: client_main.cpp  main.cpp  server_main.cpp
src/db/: password_hasher.cpp  user_repository.cpp
src/engine/: GameEngine.cpp
src/graphics/: Img.cpp  animation_clip.cpp  animation_config.cpp  board_frame_manager.cpp  board_renderer.cpp  game_view_bindings.cpp  graphics_runner.cpp  piece_animation_set.cpp  piece_animator.cpp  piece_code.cpp  sprite_repository.cpp
src/graphics/board/: board_frame_manager.cpp  board_renderer.cpp
src/graphics/sprites/: animation_clip.cpp  animation_config.cpp  piece_animation_set.cpp  piece_animator.cpp  piece_code.cpp  sprite_repository.cpp
src/graphics/window/: canvas.cpp  graphics_runner.cpp  win32_prompt_dialog.cpp
src/input/: board_mapper.cpp  controller.cpp
src/io/: BoardParser.cpp  board_printer.cpp  env_config.cpp
src/model/: Board.cpp  Piece.cpp  PieceFactory.cpp  Position.cpp
src/network/: connections_registry.cpp  game_server.cpp  message_codec.cpp  message_router.cpp  server_main.cpp
src/network/client/: network_client.cpp
src/network/core/: auth_handler.cpp  game_server.cpp  matchmaker.cpp  message_router.cpp  room_manager.cpp
src/network/protocol/: message_codec.cpp  server_message_codec.cpp
src/network/registry/: connections_registry.cpp  games_registry.cpp
src/network/room/: game_room.cpp  game_worker_pool.cpp  room_worker.cpp
src/realtime/: motion.cpp  real_time_arbiter.cpp  standard_collision_resolver.cpp
src/rules/: RuleEngine.cpp  piece_rules.cpp
src/texttests/: script_parser.cpp  script_runner.cpp
tests/: PLAN.txt
tests/manual/: bbox_check.cpp  smoke_board_renderer.cpp  smoke_client_main_flow.cpp  smoke_client_render.cpp  smoke_graphics_runner.cpp  smoke_network_client.cpp  smoke_two_players.cpp
tests/unit/: test_animation_clip.cpp  test_animation_config.cpp  test_board.cpp  test_board_mapper.cpp  test_board_parser.cpp  test_collisions.cpp  test_connections_registry.cpp  test_controller.cpp  test_db.cpp  test_event_bus.cpp  test_game_engine.cpp  test_game_worker_pool.cpp  test_message_codec.cpp  test_message_router.cpp  test_motion.cpp  test_motion_lock.cpp  test_piece_animation_set.cpp  test_piece_animator.cpp  test_piece_code.cpp  test_piece_rules.cpp  test_position.cpp  test_real_time_arbiter.cpp  test_room_manager.cpp  test_rule_engine.cpp  test_server_message_codec.cpp  test_sprite_repository.cpp
